--- a/chat-application-example/src/App.css
+++ b/chat-application-example/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,22 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.ce-chat-card {
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: #b44593 !important;
+}
+
+.ce-chats-form-container {
+  background-color: black;
+}
+
+.ce-settings-container {
+  background: #ee7724, #d8363a, #dd3675, #b44593 !important;
+}
+
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
 }
